feat: implement assigning owners
